Update - Footer BG Gradrient
Arreglao

--- a/TPO 4 - DevWeb HTML,CSS,JS/index.html
+++ b/TPO 4 - DevWeb HTML,CSS,JS/index.html
@@ -27,7 +27,7 @@
             <div class="nav-inner">
                 <div class="nav-logo-wrap">
                     <a href="#" class="brand nav-brand">
-                        <img src="./img/logo-white.png" width="150" /></a>
+                        <img src="./img/logo-white.png" /></a>
                 </div>
                 <div class="nav-menu-wrap">
                     <nav role="navigation" class="nav-menu-2 nav-menu">
@@ -40,6 +40,7 @@
             </div>
         </div>
     </div>
+    <!-- Termina Nav -->
     <!-- Sección Central -->
     <div class="section center">
         <img class="arrow" src="./img/icon/arrow.svg" />
@@ -50,14 +51,15 @@
         </div>
         <a href="#about"><img class="arrow" src="./img/img-top.png" /></a>
     </div>
+
     <div id="about" class="section wide img">
         <div class="wrap">
             <div class="title">El titulo del wrap</div>
             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, consectetur..</h2>
         </div>
-        <div class="wrapper"><img src="./img/_dash-device.png" />
-        </div>
+        <div class="wrapper"><img src="./img/_dash-device.png" /></div>
     </div>
+    <!-- Termina Sección Central -->
     <!-- Caracteristicas -->
     <div class="section">
         <div id="features" class="feature-wrap">
@@ -71,14 +73,12 @@
         </div>
         <div class="feature-wrap reverse">
             <div class="feature-content">
-                <div class="title">ConsectUltricies </div>
+                <div class="title">ConsectUltricies</div>
                 <h2 class="black-text">Amet Ipsum</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
                     tristique. </p>
             </div>
-            <div class="feature-image">
-                <img src="./img/app-05.png" width="386" class="image-2" />
-            </div>
+            <div class="feature-image"><img src="./img/app-05.png" width="386" class="image-2" /></div>
         </div>
         <div class="feature-wrap">
             <div class="feature-content" ">
@@ -89,6 +89,8 @@
         </div>
         <div class="feature-image"><img src="./img/app-04.png" width="340" class="image-2" /></div>
     </div>
+    <!-- Termina Caracteristicas -->
+    <!-- Comienza la seccion de iconos -->
     <div class="feature-wrap icons">
         <div class="feature-content icons">
             <img src="./img/icon/icon-burger-magenta.svg" width="80" class="feature-icon" />
@@ -109,6 +111,9 @@
             tristique. </p>
     </div>
     </div>
+    <!-- TErmina la seccion de iconos -->
+    <!-- Comienza la seccion de Numbers -->
+    <!-- TODO: Eliminar o cambiar por otro contenido mas relevante -->
     <div class="feature-wrap icons numbers">
         <div class="feature-content icons numbers">
             <div class="number">+12k</div>
@@ -127,6 +132,7 @@
             <h4 class="black-text">Ullamcorper </h4>
         </div>
     </div>
+    <!-- Termina la seccion de Numbers  -->
     <!-- Como usar -->
     <div id="how-to-use" class="feature-wrap">
         <div class="feature-content">
@@ -137,9 +143,7 @@
                 fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis
                 euismod.</p>
         </div>
-        <div class="feature-image">
-            <img src="./img/app-02.png" width="520" class="image-2" />
-        </div>
+        <div class="feature-image"><img src="./img/app-02.png" width="520" class="image-2" /></div>
     </div>
     <div class="feature-wrap reverse">
         <div class="feature-content">
@@ -150,10 +154,12 @@
                 fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis
                 euismod.</p>
         </div>
-        <div class="feature-image">
-            <img src="./img/img-002-p-1080.png" class="image-2" />
-        </div>
+        <div class="feature-image"><img src="./img/img-002-p-1080.png" class="image-2" /></div>
     </div>
+    <!-- Termina Como usar -->
+
+    <!-- TODO: Ver por que no esta funcionando el Carrousel -->
+
     <!-- Slider Comments -->
     <div class="quote-slider slider carrousel-2" data-delay="4000" data-animation="slide" data-autoplay="false"
         data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0"
@@ -166,13 +172,14 @@
                         erat porttitor ligula, eget lacinia odio sem nec elit. Pus sit amet fermentum. Donec id elit
                         non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.ing</h3>
                     <div class="quote-attribution">
-                        <p class="p-italic">Joshua Home</p>
                         <div class="quote-dash"></div>
+                        <p class="p-italic">Joshua Home |</p>
                         <p class="p-country">New York Times</p>
+                        <div class="quote-dash"></div>
                     </div>
                 </div>
             </div>
-            <div class="slide">
+            <div class="slide" aria-label="1 de 2" role="group" style="transform: translateX(0px); opacity: 1;">
                 <div class="quote-wrap">
                     <img src="./img/icon/quotation.svg" width="58" class="quote-icon" />
                     <h3>HeadNulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi
@@ -180,8 +187,9 @@
                         non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.ing</h3>
                     <div class="quote-attribution">
                         <div class="quote-dash"></div>
-                        <p class="p-italic">Juan Perez.</p>
+                        <p class="p-italic">Juan Perez |</p>
                         <p class="p-country">China</p>
+                        <div class="quote-dash"></div>
                     </div>
                 </div>
             </div>
@@ -194,11 +202,13 @@
         </div>
         <div class="slide-nav slider-nav slider-nav-invert round"></div>
     </div>
-    <div class="feature-wrap logos"><img src="./img/logos.png" /></div>
+    <!-- Termina el Carrousel - Slider-->
+    <!-- Logos -->
+    <div class="section-logos">
+        <div class="feature-wrap logos"><img src="./img/logos.png" /></div>
+        <div class="bottom-image-wrap"><img src="./img/bg-apps.png" /></div>
     </div>
-    <div class="bottom-image-wrap">
-        <img src="./img/bg-apps.png" />
-    </div>
+    <!-- Termina Sección Logos -->
     <!-- Sección download -->
     <div id="download" class="section wide purple">
         <div class="wrap">
@@ -208,6 +218,7 @@
             </div>
         </div>
     </div>
+    <!-- Termina Sección download -->
     <!-- Sección Contacto -->
     <div class="section wide">
         <div class="wrap">
@@ -228,11 +239,12 @@
             </div>
         </div>
     </div>
+    <!-- Termina Contacto -->
     <!-- Footer -->
     <div class="footer">
         <div class="wrap">
             <a class="footer-link" href="https://github.com/marceloanton/grupo14fullstacknodejs">
-                <img src="./img/icon-footer.png" width="136" alt="Grupo 14"></a>
+                <img class="img-g14-footer" src="./img/icon-footer.png" alt="Grupo 14"></a>
             <div class="footer-list">
                 <a href="#" class="footer-link bi bi-instagram"></a>
                 <a href="#" class="footer-link bi bi-facebook"></a>
@@ -240,6 +252,7 @@
             </div>
         </div>
     </div>
+    <!-- Termina Footer -->
 </body>
 
 </html>
