--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <nav class="navbar bg-dark border-bottom border-body navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <nav class="navbar navbar-a bg-dark border-bottom border-body navbar-expand-lg bg-body-tertiary"
+        data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="./TPO_Final/img/logo-white.png" alt="GRUPO 14" width="30" height="30">
@@ -36,14 +37,14 @@
     <div class="container">
         <h3 class="title-h3 h3" id="proyectos">Tabla de Contenidos</h3>
         <ul>
-            <li><a class="a text-decoration-none text-dark w-100" href="./TPO_1_Flexbox/index.html">Flexbox</a></li>
-            <li><a class="a text-decoration-none text-dark w-100" href="./TPO_2_Nombre con Javascript/index.html">Nombre
+            <li><a class="text-decoration-none w-100" href="./TPO_1_Flexbox/index.html">Flexbox</a></li>
+            <li><a class="text-decoration-none w-100" href="./TPO_2_Nombre con Javascript/index.html">Nombre
                     con JS</a></li>
-            <li><a class="a text-decoration-none text-dark w-100" href="./TPO_3_Functions/index.html">Functions & Arrow
+            <li><a class="text-decoration-none w-100" href="./TPO_3_Functions/index.html">Functions & Arrow
                     Functions</a></li>
-            <li><a class="a text-decoration-none text-dark w-100" href="./TPO_4_Web_16_05_2024/index.html">TPO 4</a>
+            <li><a class="text-decoration-none w-100" href="./TPO_4_Web_16_05_2024/index.html">TPO 4</a>
             </li>
-            <li><a class="a text-decoration-none text-dark w-100" href="./TPO_Final/index.html">Final (En
+            <li><a class="text-decoration-none w-100" href="./TPO_Final/index.html">Final (En
                     realización)</a></li>
         </ul>
     </div>
@@ -52,13 +53,13 @@
     <main>
         <div class="header w-100 justify-content-center cards">
             <div class="card" id="integrantes">
-                <img src="https://avatars.githubusercontent.com/u/5197537?v=4" alt="">
+                <img src="https://avatars.githubusercontent.com/u/5197537?v=4" alt="Noelia Lepifan">
                 <div class="card-content">
                     <h2>
                         Noelia Lepifan
                     </h2>
                     <a href="https://github.com/lefinoe" class="button">
-                        Ver mas...
+                        Ver mas
                         <span class="material-symbols-outlined">
                             <i>➡</i>
                         </span>
@@ -67,13 +68,13 @@
             </div>
 
             <div class="card">
-                <img src="https://avatars.githubusercontent.com/u/5240929?v=4" alt="">
+                <img src="https://avatars.githubusercontent.com/u/5240929?v=4" alt="Marcelo Anton">
                 <div class="card-content">
                     <h2>
                         Marcelo Anton
                     </h2>
                     <a href="https://github.com/marceloanton" class="button">
-                        Ver mas...
+                        Ver mas
                         <span class="material-symbols-outlined">
                             <i>➡</i>
                         </span>
@@ -82,24 +83,40 @@
             </div>
 
             <div class="card">
-                <img src="https://avatars.githubusercontent.com/u/118388732?v=4" alt="">
+                <img src="https://avatars.githubusercontent.com/u/118388732?v=4" alt=" Ignacio Moyano">
                 <div class="card-content">
                     <h2>
                         Ignacio Moyano
                     </h2>
                     <a href="https://github.com/nachomoyano621" class="button">
-                        Ver mas...
+                        Ver mas
                         <span class="material-symbols-outlined">
                             <i>➡</i>
                         </span>
                     </a>
                 </div>
             </div>
+
+            <div class="card">
+                <img src="https://avatars.githubusercontent.com/u/96626477?v=4" alt="Adan Cuenca">
+                <div class="card-content">
+                    <h2>
+                        Adan Cuenca
+                    </h2>
+                    <a href="https://github.com/AdanCuenca" class="button">
+                        Ver mas
+                        <span class="material-symbols-outlined">
+                            <i>➡</i>
+                        </span>
+                    </a>
+                </div>
+            </div>
+
         </div>
     </main>
-    <div class="footer">
-        <a class="github" target="_top" href="https://github.com/marceloanton/grupo14fullstacknodejs">
-            <img src="./TPO_Final/img/logo-white.png" alt="Grupo 14"></a>
+    <div class="footer w-100 justify-content-center cards">
+        <a target="_top" href="https://github.com/marceloanton/grupo14fullstacknodejs">
+            <img src="./TPO_Final/img/github-white.svg" alt="Grupo 14"></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./resources/js/index.js"></script>
