Creación de funcion para reutilizar las cards, se añadio el antiguo form a la web

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <main>
         <div class="header w-100 justify-content-center cards">
-            <div class="card" id="integrantes">
+            <div class="card">
                 <img src="https://avatars.githubusercontent.com/u/5197537?v=4" alt="Noelia Lepifan">
                 <div class="card-content">
                     <h2>
@@ -111,7 +111,6 @@
                     </a>
                 </div>
             </div>
-
         </div>
     </main>
     <div class="footer w-100 justify-content-center cards">
