--- a/TPO_4_Web_16_05_2024/index.html
+++ b/TPO_4_Web_16_05_2024/index.html
@@ -1,75 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <title>Agencias Pepito</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <div class="container">
-        <div id="contact">
-            <h1>Contacto</h1>
-            <form id="form">
 
-                <label for="first_name">Nombre:</label>
-                <input type="text" class="firstname" id="firstname" name="firstname" placeholder="Ingresa tu nombre"
-                    required>
-                <div class="error-control">
-                    <span class="error-span"></span>
-                </div>
-                <label for="last_name">Apellido:</label>
-                <input type="text" class="lastname" id="lastname" name="lastname" placeholder="Ingresa tu apellido"
-                    required>
-                <div class="error-control">
-                    <span class="error-span"></span>
-                </div>
-                <label for="email">Correo Electrónico:</label>
-                <input type="email" class="email" id="email" name="email" placeholder="ejemplo@email.com" required>
-                <div class="error-control">
-                    <span class="error-span"></span>
-                </div>
-                <label for="password">Contraseña:</label>
-                <input type="password" class="password" id="password" name="password"
-                    placeholder="Ingresa tu contraseña" required>
-                <div class="error-control">
-                    <span class="error-span"></span>
-                </div>
-                <label for="message">Mensaje:</label>
-                <input type="text" class="message" id=" message" name="message" maxlength="200"
-                    placeholder="Escribe tu mensaje" required>
-                <div class="error-control">
-                    <span class="error-span"></span>
-                    <span id="counter"></span>
-                </div>
-                <div class="btn-container">
-                    <input type="submit" class="btn" value="Enviar"></input>
-                </div>
-            </form>
-        </div>
-    </div>
-    <!-- Modal para mostrar los datos ingresados -->
-    <div class="modal fade dark" id="dataModal" tabindex="-1" aria-labelledby="dataModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="dataModalLabel">Datos ingresados</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <!-- Aca se mostraran los datos -->
-                </div>
-                <div class="modal-footer">
-                    <p>Gracias por tu mensaje!</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./pages/destinos.html">Destinos</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="./pages/nosotros.html">Acerca de</a></li>
+        </ul>
+    </nav>
+
+    <header>
+        <h1>Agencias Pepito</h1>
+    </header>
+    <main>
+        <h2>Bienvenido a la agencia de viajes de pepito!</h2>
+        <p>Ofrecemos una amplia gama de opciones de viaje para todos los gustos y presupuestos.</p>
+        <button><a href="./pages/destinos.html">Descubra nuestros destinos</a></button>
+    </main>
 </body>
 
 </html>
