--- a/TPO_4_Web_16_05_2024/pages/destinos.html
+++ b/TPO_4_Web_16_05_2024/pages/destinos.html
@@ -3,7 +3,9 @@
 
 <head>
     <title>Agencias Pepito - Destinos</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./../css/styles.css">
+    <link rel="stylesheet" href="./../css/cards.css">
 </head>
 
 <body>
@@ -18,14 +20,18 @@
     <header>
         <h1>Destinos</h1>
     </header>
+
     <main>
         <h2>Descubra los destinos</h2>
-        <ul>
-            <li><a href="#">Paris, Francia</a></li>
-            <li><a href="#">Roma, Italia</a></li>
-            <li><a href="#">Barcelona, España</a></li>
-        </ul>
+        <div class="cards">
+            <div id="cardContainer">
+
+            </div>
+        </div>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./../js/funciones.js"></script>
 </body>
 
 </html>
