se agrego pie y responsive al grid

--- a/TPO_Final2/index.html
+++ b/TPO_Final2/index.html
@@ -10,6 +10,9 @@
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Fuente de Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
     <!-- Encabezado con navegación -->
@@ -82,8 +85,44 @@
 
     <!-- Pie de página -->
     <footer>
-        <p>&copy; 2024 Empresa de Viajes. Todos los derechos reservados.</p>
+        <div class="footer-container">
+            <div class="about-us">
+                <h3>Nosotros</h3>
+                <p>Grupo #14 </p>
+                <ul>
+                    <li>Marcelo Rúben Antón</li>
+                    <li>Ignacio Moyano</li>
+                    <li>Noelia Lefipan</li>
+                    <li>Jonathan Baldovino</li>
+                    <li>Adan Cuenca</li>
+                </ul>
+            </div>
+            <div class="footer-content">
+                <div class="social-media">
+                    <a href="https://www.facebook.com/Grupo 14" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://x.com/Grupo 14" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com/fGrupo 14" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.youtube.com/Grupo 14" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/fGrupo 14" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+               
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Todos los derechos reservados.</p>
+            </div>
+        </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
 
