--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
                     con JS</a></li>
             <li><a class="text-decoration-none w-100" href="./TPO_3_Functions/index.html">Functions & Arrow
                     Functions</a></li>
-            <li><a class="text-decoration-none w-100" href="./TPO_4_Web_16_05_2024/index.html">TPO 4</a>
-            </li>
-            <li><a class="text-decoration-none w-100" href="./TPO_Final/index.html">Final (En
-                    realización)</a></li>
+            <li><a class="text-decoration-none w-100" href="./TPO_Final/index.html">Final Frontend</a></li>
         </ul>
     </div>
 
