--- a/TPO_Final/pages/contacto.html
+++ b/TPO_Final/pages/contacto.html
@@ -12,6 +12,8 @@
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Fuente de Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Scripts -->
     <script src="./../js/script.js" defer></script>
 </head>
