Carrousel no depende de bootsrap, animaciones varias, y otros detallitos

--- a/TPO_Final/index.html
+++ b/TPO_Final/index.html
@@ -7,25 +7,28 @@
     <title>Empresa de Viajes</title>
     <!-- Vincula el archivo CSS -->
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Favicon -->
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Fuente de Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Scripts -->
-    <script src="./../js/script.js" defer></script>
+
 </head>
 
 <body>
     <!-- Encabezado con navegación -->
     <header>
         <nav>
+            <div class="logo">
+                <a href="./../index.html">
+                    <i class="fas fa-plane"></i>
+                </a>
+            </div>
             <ul>
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#destinos">Destinos</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a class="animacion-sub" href="#home">Inicio</a></li>
+                <li><a class="animacion-sub" href="#destinos">Destinos</a></li>
+                <li><a class="animacion-sub" href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -61,30 +64,19 @@
         </div>
         <br>
         <br>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/3wF-K7HhSfI" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="carousel-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/5s0xoNSlQp0" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="carousel-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7a7yrRzt6YU" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="carousel-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/J4zpa-rk6Q4" frameborder="0" allowfullscreen></iframe>
-                </div>
+        <div class="carousel-container">
+            <button id="prevBtn" class="carousel-control">&#10094;</button>
+            <div class="carousel">
+                <iframe class="carousel-item active" src="https://www.youtube.com/embed/3wF-K7HhSfI" frameborder="0"
+                    allowfullscreen></iframe>
+                <iframe class="carousel-item" src="https://www.youtube.com/embed/5s0xoNSlQp0" frameborder="0"
+                    allowfullscreen></iframe>
+                <iframe class="carousel-item" src="https://www.youtube.com/embed/7a7yrRzt6YU" frameborder="0"
+                    allowfullscreen></iframe>
+                <iframe class="carousel-item" src="https://www.youtube.com/embed/J4zpa-rk6Q4" frameborder="0"
+                    allowfullscreen></iframe>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="background-color: transparent; border-radius: 50%; font-size: 3rem; padding: 1rem 1.5rem;">
-                <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: #014b12;"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" style="background-color: transparent; border-radius: 50%; font-size: 3rem; padding: 1rem 1.5rem;">
-                <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: #014b12;"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <button id="nextBtn" class="carousel-control">&#10095;</button>
         </div>
     </section>
 
@@ -126,9 +118,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Scripts -->
+    <script src="./js/carrousel.js" defer></script>
 </body>
 
 </html>
