--- a/TPO_Final/pages/contacto.html
+++ b/TPO_Final/pages/contacto.html
@@ -14,18 +14,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Scripts -->
-    <script src="./../js/script.js" defer></script>
 </head>
 
 <body>
     <!-- Encabezado con navegación -->
     <header>
         <nav>
+            <div class="logo">
+                <a href="./../index.html">
+                    <i class="fas fa-plane"></i>
+                </a>
+            </div>
             <ul>
-                <li><a href="./../index.html">Inicio</a></li>
-                <li><a href="./../index.html">Destinos</a></li>
-                <li><a href="./../pages/contacto.html">Contacto</a></li>
+                <li><a class="animacion-sub" href="./../index.html">Inicio</a></li>
+                <li><a class="animacion-sub" href="./../index.html">Destinos</a></li>
+                <li><a class="animacion-sub" href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -137,6 +140,8 @@
             </div>
         </div>
     </footer>
+    <!-- Scripts -->
+    <script src="./../js/contacto.js" defer></script>
 </body>
 
 </html>
