Se agrego boton de menu, se corrigio irregulariadades en el form contacto

--- a/TPO_Final/index.html
+++ b/TPO_Final/index.html
@@ -21,15 +21,16 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="./../index.html">
+                <a href="#home">
                     <i class="fas fa-plane"></i>
                 </a>
             </div>
-            <ul>
+            <ul class="menu">
                 <li><a class="animacion-sub" href="#home">Inicio</a></li>
                 <li><a class="animacion-sub" href="#destinos">Destinos</a></li>
                 <li><a class="animacion-sub" href="./pages/contacto.html">Contacto</a></li>
             </ul>
+            <button class="btn-menu" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
         </nav>
     </header>
 
@@ -120,6 +121,7 @@
     </footer>
     <!-- Scripts -->
     <script src="./js/carrousel.js" defer></script>
+    <script src="./js/menu.js" defer></script>
 </body>
 
 </html>
