--- a/TPO_Final/pages/contacto.html
+++ b/TPO_Final/pages/contacto.html
@@ -21,85 +21,84 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="./../index.html">
+                <a href="#home">
                     <i class="fas fa-plane"></i>
                 </a>
             </div>
-            <ul>
+            <ul class="menu">
                 <li><a class="animacion-sub" href="./../index.html">Inicio</a></li>
-                <li><a class="animacion-sub" href="./../index.html">Destinos</a></li>
+                <li><a class="animacion-sub" href="./../index.html#destinos">Destinos</a></li>
                 <li><a class="animacion-sub" href="./contacto.html">Contacto</a></li>
             </ul>
+            <button class="btn-menu" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
         </nav>
     </header>
     <!-- Sección de contacto -->
-    <section id="contacto">
-        <main>
-            <h2>Contacto</h2>
-            <div class="container">
-                <div id="contacto">
-                    <form id="form">
-                        <label for="firstname">Nombre:</label>
-                        <input type="text" class="firstname" id="firstname" name="firstname"
-                            placeholder="Ingresa tu nombre" required>
-                        <div class="error-control">
-                            <span class="error-span"></span>
-                        </div>
-                        <label for="lastname">Apellido:</label>
-                        <input type="text" class="lastname" id="lastname" name="lastname"
-                            placeholder="Ingresa tu apellido" required>
-                        <div class="error-control">
-                            <span class="error-span"></span>
-                        </div>
-                        <label for="email">Correo Electrónico:</label>
-                        <input type="email" class="email" id="email" name="email" placeholder="ejemplo@email.com"
-                            required>
-                        <div class="error-control">
-                            <span class="error-span"></span>
-                        </div>
-                        <label for="password">Contraseña:</label>
-                        <input type="password" class="password" id="password" name="password"
-                            placeholder="Ingresa tu contraseña" required>
-                        <div class="error-control">
-                            <span class="error-span"></span>
-                        </div>
-                        <label for="message">Mensaje:</label>
-                        <textarea type="text" class="message" id="message" name="message" maxlength="200"
-                            placeholder="Escribe tu mensaje" required></textarea>
-                        <div class="error-control">
-                            <span class="error-span"></span>
-                            <span id="counter"></span>
-                        </div>
+    <main>
+        <h2 class="title-contacto">Contacto</h2>
+        <div class="container">
+            <div id="contacto">
+                <form id="form">
+                    <label for="firstname">Nombre:</label>
+                    <input type="text" class="firstname" id="firstname" name="firstname" placeholder="Ingresa tu nombre"
+                        required>
+                    <div class="error-control">
+                        <span class="error-span"></span>
+                    </div>
+                    <label for="lastname">Apellido:</label>
+                    <input type="text" class="lastname" id="lastname" name="lastname" placeholder="Ingresa tu apellido"
+                        required>
+                    <div class="error-control">
+                        <span class="error-span"></span>
+                    </div>
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email" class="email" id="email" name="email" placeholder="ejemplo@email.com" required>
+                    <div class="error-control">
+                        <span class="error-span"></span>
+                    </div>
+                    <label for="password">Contraseña:</label>
+                    <input type="password" class="password" id="password" name="password"
+                        placeholder="Ingresa tu contraseña" required>
+                    <div class="error-control">
+                        <span class="error-span"></span>
+                    </div>
+                    <label for="message">Mensaje:</label>
+                    <textarea type="text" class="message" id="message" name="message" maxlength="200"
+                        placeholder="Escribe tu mensaje" required></textarea>
+                    <div class="error-control">
+                        <span class="error-span"></span>
+                        <span id="counter"></span>
+                    </div>
 
-                        <label for="preference">Preferencia de contacto:</label>
-                        <select id="preference" name="preference" required>
-                            <option value="">Selecciona una opción</option>
-                            <option value="email">Email</option>
-                            <option value="telefono">Teléfono</option>
-                        </select>
+                    <label for="preference">Preferencia de contacto:</label>
+                    <select id="preference" name="preference" required>
+                        <option value="">Selecciona una opción</option>
+                        <option value="email">Email</option>
+                        <option value="telefono">Teléfono</option>
+                    </select>
 
-                        <label for="newsletter">
-                            <input type="checkbox" name="newsletter" id="newsletter">Deseo recibir el boletín
-                            informativo
-                        </label>
+                    <label for="newsletter">
+                        <input type="checkbox" name="newsletter" id="newsletter">
+                        <span>Deseo recibir el boletín informativo</span>
+                    </label>
 
-                        <input type="submit" class="btn" value="Enviar">
-                    </form>
+                    <input type="submit" class="btn" value="Enviar">
+                </form>
+            </div>
+        </div>
+        <!-- El Popup -->
+        <div id="dataModal" class="modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <span class="close">&times;</span>
+                    <h2>Datos del formulario</h2>
+                    <hr class="horizontal-line">
+                </div>
+                <div class="modal-body">
+                    <!-- Aquí se muestran los datos del formulario -->
                 </div>
             </div>
-            <!-- El Popup -->
-            <div id="dataModal" class="modal">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <span class="close">&times;</span>
-                        <h2>Datos del formulario</h2>
-                    </div>
-                    <div class="modal-body">
-                        <!-- Aquí se muestran los datos del formulario -->
-                    </div>
-                </div>
-            </div>
-    </section>
+        </div>
     </main>
 
     <!-- Pie de página -->
@@ -142,6 +141,7 @@
     </footer>
     <!-- Scripts -->
     <script src="./../js/contacto.js" defer></script>
+    <script src="./../js/menu.js" defer></script>
 </body>
 
 </html>
