--- a/TPO_Final/index.html
+++ b/TPO_Final/index.html
@@ -21,19 +21,18 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#home">
+                <a href="index.html">
                     <i class="fas fa-plane"></i>
                 </a>
             </div>
             <ul class="menu">
-                <li><a class="animacion-sub" href="#home">Inicio</a></li>
-                <li><a class="animacion-sub" href="#destinos">Destinos</a></li>
+                <li><a class="animacion-sub" href="index.html">Inicio</a></li>
+                <li><a class="animacion-sub" href="index.html#destinos">Destinos</a></li>
                 <li><a class="animacion-sub" href="./pages/contacto.html">Contacto</a></li>
             </ul>
             <button class="btn-menu" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
         </nav>
     </header>
-
     <!-- Sección de destinos -->
     <section id="destinos">
         <h2>Destinos Populares</h2>
