--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
     <div class="container">
         <h3 class="title-h3 h3" id="proyectos">Tabla de Contenidos</h3>
         <ul>
-            <li><a class="text-decoration-none w-100" href="./TPO_1_Flexbox/index.html">Flexbox</a></li>
-            <li><a class="text-decoration-none w-100" href="./TPO_2_Nombre con Javascript/index.html">Nombre
+            <li><a class="text-decoration-none w-100" href="./01_TPO_Flexbox/index.html">Flexbox</a></li>
+            <li><a class="text-decoration-none w-100" href="./02_TPO_Nombre con Javascript/index.html">Nombre
                     con JS</a></li>
-            <li><a class="text-decoration-none w-100" href="./TPO_3_Functions/index.html">Functions & Arrow
+            <li><a class="text-decoration-none w-100" href="./03_TPO_Functions/index.html">Functions & Arrow
                     Functions</a></li>
-            <li><a class="text-decoration-none w-100" href="./TPO_Final/index.html">Final Frontend</a></li>
+            <li><a class="text-decoration-none w-100" href="./04_TPO_Web_16_05_2024/index.html">Web con formualario de
+                    contacto</a></li>
+            <li><a class="text-decoration-none w-100" href="./05_TPO_FrontEnd/index.html">Final Frontend</a></li>
+            <li><a class="text-decoration-none w-100" href="./06_TPO_Final_NodeJS/">Final Frontend API NodeJS</a></li>
         </ul>
     </div>
 
